--- a/README.ipynb
+++ b/README.ipynb
@@ -557,6 +557,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Viewing Data Frames\n",
+    "\n",
+    "Note that `pandas` data frames in Python can be a little difficult to work with, because Python doesn't have a built-in variable explorer. If you're doing data science, I recommend using an IDE like RStudio or Spyder that has a built-in variable explorer. However, if you don't have a variable explorer, you can prevent Python from truncating data frames using the `options` in `pandas`. For instance, to increase the maximum allowed column width to 100 characters, we can use `pandas.options.display.max_colwidth = 100`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, it's possible to open the data frame in a new window to view it in full using the `webbrowser` library:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert data frame to HTML and open in a new browser window\n",
+    "import webbrowser\n",
+    "\n",
+    "params['commodity'].to_html(\"frame.html\")\n",
+    "url = \"http://localhost:8888/files/notebook/frame.html\"\n",
+    "webbrowser.open(url,new=2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Supplying Parameter Arguments to imf_dataset: A Tale of Two Workflows\n",
     "\n",
     "There are two ways to supply parameters to `imfp.imf_dataset`: by supplying list arguments or by supplying a modified parameters dict. The list arguments workflow will be more intuitive for most users, but the dict argument workflow requires a little less code.\n",
