Updated News and build

--- a/News
+++ b/News
@@ -1,5 +1,9 @@
 # All updates will be detailed here
 
+## Version 1.0.1
+
+- README update
+
 ## Version 1.0.0
 
 - Initial release of the first complete Python library for comprehensive access to the IMF API
