Change to recommended Viewing pane method

--- a/README.ipynb
+++ b/README.ipynb
@@ -567,7 +567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, it's possible to open the data frame in a new window to view it in full using the `webbrowser` library:"
+    "Alternatively, it's possible to open the data frame in a new window to view it in full:"
    ]
   },
   {
@@ -576,12 +576,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert data frame to HTML and open in a new browser window\n",
+    "import imfp\n",
+    "import tempfile\n",
     "import webbrowser\n",
     "\n",
-    "params['commodity'].to_html(\"frame.html\")\n",
-    "url = \"http://localhost:8888/files/notebook/frame.html\"\n",
-    "webbrowser.open(url,new=2)"
+    "# Define a simple function to view data frame in a browser window\n",
+    "def View(df):\n",
+    "    html = df.to_html()\n",
+    "    with tempfile.NamedTemporaryFile('w', delete=False, suffix='.html') as f:\n",
+    "        url = 'file://' + f.name\n",
+    "        f.write(html)\n",
+    "    webbrowser.open(url)\n",
+    "\n",
+    "# Open data frame in a new browser window using the function\n",
+    "df = imfp.imf_databases()\n",
+    "View(df)"
    ]
   },
   {
