--- a/README.ipynb
+++ b/README.ipynb
@@ -881,7 +881,7 @@
     "# Fetch the 'freq' input code for annual frequency\n",
     "params['freq'] = params['freq'][params['freq']['description'].str.contains(\"Annual\")]\n",
     "\n",
-    "# Fetch the 'commodity' input code for coal\n",
+    "# Fetch the 'commodity' input code(s) for coal\n",
     "params['commodity'] = params['commodity'][params['commodity']['description'].str.contains(\"Coal\")]\n",
     "\n",
     "# Fetch the 'unit_measure' input code for index\n",
