--- a/README.ipynb
+++ b/README.ipynb
@@ -98,7 +98,25 @@
    "source": [
     "\n",
     "\n",
-    "The function will throw an error if the provided name is missing, NULL, NA, not a string, or longer than 255 characters. If the provided name is \"imfr\" (the default) or an empty string, the function will issue a warning recommending the use of a unique app name to avoid hitting rate limits.\n",
+    "The function will throw an error if the provided name is missing, NULL, NA, not a string, or longer than 255 characters. If the provided name is \"imfr\" (the default) or an empty string, the function will issue a warning recommending the use of a unique app name to avoid hitting rate limits."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adjusting the rate limit with _imf_wait_time\n",
+    "\n",
+    "During import of `imfp`, a variable called _imf_wait_time is set to a default value of 1.5. This is the mandatory enforced wait time between API calls, to prevent repeated or recursive calls from exceeding the limit. This wait time should be sufficient for most applications. However, if you are running parallel processes using `imfp` (e.g. during cross-platform testing), this wait time may be insufficient to prevent you from running up against the API's rate and bandwidth limits. You can increase this wait time by simply changing the variable value. For instance, to increase the between-call wait time by one second, use `_imf_wait_time += 1`.\n",
+    "\n",
+    "Also note that by default, `imfp` functions will retry any API call rejected for bandwidth or rate limit reasons. The number of times `imfp` will attempt the call is set by the `times` argument, with a default value of 3. (With this value, requests will be retried twice after an initial failure.) Note that `imfp` enforces an exponentially increasing wait time between function calls, with a base wait time of 5 seconds on the first retry, so it is not recommended to set a high value for `times`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### Fetching an Index of Databases with the imf_databases Function\n",
     "\n",
