--- a/README.ipynb
+++ b/README.ipynb
@@ -9,6 +9,7 @@
     "\n",
     "[![Tests](https://github.com/chriscarrollsmith/imfp/actions/workflows/actions.yml/badge.svg)](https://github.com/chriscarrollsmith/imfp/actions/workflows/actions.yml)\n",
     "[![PyPI Version](https://img.shields.io/pypi/v/imfp.svg)](https://pypi.python.org/pypi/imfp)\n",
+    "[![Code style: black](https://img.shields.io/badge/code%20style-black-000000.svg)](https://github.com/psf/black)\n",
     "\n",
     "`imfp`, by Christopher C. Smith, is a Python package for downloading data from the [International Monetary\n",
     "Fund's](http://data.imf.org/) [RESTful JSON\n",
