--- a/README.ipynb
+++ b/README.ipynb
@@ -164,9 +164,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function returns the IMF’s listing of 259 databases available through the API. (In reality, 7 of the listed databases are defunct and not actually available: FAS_2015, GFS01, FM202010, APDREO202010, AFRREO202010, WHDREO202010, BOPAGG_2020.)\n",
+    "This function returns the IMF’s listing of 259 databases available through the API. (In reality, 8 of the listed databases are defunct and not actually available: FAS_2015, GFS01, FM202010, APDREO202010, AFRREO202010, WHDREO202010, BOPAGG_2020, DOT_2020Q1.)\n",
     "\n",
-    "To view and explore the database list, it’s possible to explore subsets of the data frame by row number with `databases.loc`:\n"
+    "To view and explore the database list, it’s possible to explore subsets of the data frame by row number with `databases.loc`:"
    ]
   },
   {
@@ -905,6 +905,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1071,6 +1072,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1080,6 +1082,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1095,9 +1098,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Planned features\n",
+    "\n",
+    "- Implement automatic build/render of readthedocs documentation with Sphinx\n",
+    "- Implement automatic build/release/publish of package updates\n",
+    "- Move response mocking functionality from `_download_parse` to `_imf_get`\n",
+    "- Investigate and implement different and more appropriate exception types, as we're currently handling too many different cases with `ValueError`\n",
+    "- More fully investigate the types of metadata available through the API and the most appropriate way to return them when a user calls `include_metadata`\n",
+    "- Implement optional response caching for `imf_databases` and `imf_parameters`\n",
+    "- Simplify and modularize some of the code, particularly in `imf_dataset`\n",
+    "\n",
     "## Contributing\n",
     "\n",
-    "I would love to have your help in improving `imfr`. If you encounter a bug while using the library, please open an issue. Alternatively, fix the bug and open a pull request. Thanks in advance for your help!"
+    "I would love to have your help in improving `imfp`. If you encounter a bug while using the library, please open an issue. Alternatively, fix the bug and open a pull request. Thanks in advance for your help!"
    ]
   }
  ],
