Adjusted CI/CD workflows and updated README

--- a/README.ipynb
+++ b/README.ipynb
@@ -1100,6 +1100,7 @@
    "source": [
     "## Planned features\n",
     "\n",
+    "- If pyproject.toml version has been incremented, automatically deploy Github release from main with release notes auto-generated from `News` file or PR message\n",
     "- Implement automatic build/render of readthedocs documentation with Sphinx\n",
     "- Implement automatic build/release/publish of package updates\n",
     "- Move response mocking functionality from `_download_parse` to `_imf_get`\n",
@@ -1110,7 +1111,9 @@
     "\n",
     "## Contributing\n",
     "\n",
-    "I would love to have your help in improving `imfp`. If you encounter a bug while using the library, please open an issue. Alternatively, fix the bug and open a pull request. Thanks in advance for your help!"
+    "I would love to have your help in improving `imfp`. If you encounter a bug while using the library, please open an issue. Alternatively, fix the bug and open a pull request to the `dev` branch. Thanks in advance for your help!\n",
+    "\n",
+    "Note to maintainers: To deploy a new version of the package, increment the version number with `poetry version patch` (or `minor`/`major` for larger updates) and push to dev. Github Actions will automatically format the code with black, render the README, and run the unit tests. If the workflow completes successfully, open a PR to main. After merging, the workflow will test again as one last sanity check and then automatically deploy the new version to PyPi."
    ]
   }
  ],
