--- a/News
+++ b/News
@@ -1,5 +1,11 @@
 # All updates will be detailed here
 
+## Version 1.1.2
+
+- Updated dependencies
+
+- Required Python 3.10 and pandas 2.2 to prevent numpy binary incompatibility error
+
 ## Version 1.1.1
 
 - Updated dependencies
